--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@capacitor/camera": "^6.0.2",
     "@capacitor/cli": "^6.0.0",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
@@ -21,6 +22,7 @@
     "vant": "^4.9.1",
     "vue": "^3.4.18",
     "vue-i18n": "^9.2.2",
+    "vue-qrcode-reader": "^5.5.7",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
