--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/cli": "^6.0.0",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "firebase": "^11.0.1",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "vant": "^4.9.1",
