--- a/src-capacitor/android/gradle.properties
+++ b/src-capacitor/android/gradle.properties
@@ -20,3 +20,7 @@ org.gradle.jvmargs=-Xmx1536m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+MYAPP_RELEASE_STORE_FILE=/home/an/Documents/IUH/KTLN/friends_pay/src-capacitor/android/my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=123123
+MYAPP_RELEASE_KEY_PASSWORD=123123
