--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@capacitor/android": "^3.9.0",
     "@capacitor/camera": "^6.0.2",
     "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/push-notifications": "^6.0.2",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "firebase": "^11.0.1",
