--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -1,5 +1,14 @@
 {
   "appId": "com.friendpay.app",
   "appName": "Friends Pay",
-  "webDir": "www"
+  "webDir": "www",
+  "plugins": {
+    "PushNotifications": {
+      "presentationOptions": [
+        "badge",
+        "sound",
+        "alert"
+      ]
+    }
+  }
 }
