--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -9,6 +9,7 @@
     "@capacitor/app": "^6.0.0",
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
-    "@capacitor/push-notifications": "^6.0.0"
+    "@capacitor/push-notifications": "^6.0.2",
+    "@capacitor/camera": "^6.1.0"
   }
 }
