--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-; backend_url=http://localhost:8888/api/v1
-backend_url=https://friendspay.io.vn/api/v1
+backend_url=http://localhost:8888/api/v1
+# backend_url=https://friendspay.io.vn/api/v1
